<resources>
    <string name="app_name">Бирки</string>
    <string name="name">Название</string>
    <string name="small_description">Небольшое описание</string>
    <string name="not_necessary">Не обязательно</string>
    <string name="add_photo">Добавить фото</string>
    <string name="not_necessary_to_input_all">Не обязательно заполнять все. Если какой-то параметр не указан, игнорируйте его</string>
    <string name="wash_normal_type">Стирка в нормальном режиме</string>
    <string name="wash_moderate_type">Стирка в умеренном режиме</string>
    <string name="wash_delicate_type">Особо деликатная стирка</string>
    <string name="wash_hand_type">Ручная стирка</string>
    <string name="wash_banned_type">Не стирать</string>
    <string name="temperature_pattern" translatable="false">%f℃</string>
    <string name="_30" translatable="false">30℃</string>
    <string name="_45" translatable="false">45℃</string>
    <string name="_60" translatable="false">60℃</string>
    <string name="_75" translatable="false">75℃</string>
    <string name="_90" translatable="false">90℃</string>
    <string name="whitening_any_type">Любое отбеливание</string>
    <string name="whitening_without_cl_type">Любое отбеливание кроме хлора</string>
    <string name="whitening_banned_type">Не отбеливать</string>
    <string name="twist_banned">Не выкручивать</string>
    <string name="ironing_200">Глажение при 200℃ (•••)</string>
    <string name="ironing_150">Глажение при 150℃ (••)</string>
    <string name="ironing_110">Глажение при 110℃ (•)</string>
    <string name="ironing_any_short">При любой температуре</string>
    <string name="ironing_any">Глажение при любой температуре</string>
    <string name="ironing_not_stream_off">Не отпаривать</string>
    <string name="ironing_no">Не гладить</string>
    <string name="dry_cleaning_any">Хим. чистка любым растворителем</string>
    <string name="dry_cleaning_p">Хим. чистка любым растворителем, кроме трихлорэтилена</string>
    <string name="dry_cleaning_p_short">Любым, кроме трихлорэтилена</string>
    <string name="dry_cleaning_p_">Хим. чистка любым растворителем, кроме трихлорэтилена в щад. режиме</string>
    <string name="dry_cleaning_p__short">Любым, кроме трихлорэтилена в щад. режиме</string>
    <string name="dry_cleaning_f">Хим. чистка только нежным растворителем</string>
    <string name="dry_cleaning_f_short">Только нежным растворителем</string>
    <string name="dry_cleaning_f_">Хим. чистка любым растворителем, кроме трихлорэтилена</string>
    <string name="dry_cleaning_f__short">Любым, кроме трихлорэтилена</string>
    <string name="dry_cleaning_min_t">Сухая чистка при низкой t</string>
    <string name="dry_clean_without_stream">Сухая чистка без пара</string>
    <string name="dry_cleaning_low_humidity">Сухая чистка, низкая влажность</string>
    <string name="dry_cleaning_short_drying">Сухая чистка, короткая сушка</string>
    <string name="dry_cleaning_banned">Хим. чистка запрещена</string>
    <string name="dry_cleaning_banned_short">Запрещена</string>
    <string name="spinning_normal">Отжим при нормальной температуре</string>
    <string name="spinning_low">Отжим при низкой температуре</string>
    <string name="spinning_low_short">Низкой (•)</string>
    <string name="spinning_banned">Отжим апрещен</string>
    <string name="spinning_banned_short">Запрещен (Зачеркнуто)</string>
    <string name="drying_unfolded">Сушка в разложенном виде (^)</string>
    <string name="drying_stretch">Сушка в растянутом виде</string>
    <string name="save">Сохранить</string>
    <string name="cancel">Отменить</string>
    <string name="add">Добавить</string>
    <string name="back">Назад</string>
    <string name="next">Далее</string>
    <string name="spinning_caption">Обратите внимание на круг внутри квадрата. Выберите вариант по количеству точек в нем.\n Если он перечеркнут - отжим запрещен</string>
    <string name="dry_cleaning_caption">Если на бирке есть круг, посмотрите на букву в нем и в зависимости от нее выберите, как должна проходить хим. чистка</string>
    <string name="drying_caption">Выбирайте в зависимости от знака внутри квадрата</string>
    <string name="ironing_caption">Посмотрите на утюг. Все зависит от количества нарисованных в нем точек. Если точек нет, ограничений по температуре нет.</string>
    <string name="whitening_caption">Разрешено любое отбеливание, если на бирке нарисован треугольник, внутри которого написано «Cl», либо ничего. Если треугольник заштрихован, нельзя отбеливать хлором, если зачеркнут - запрещено</string>
    <string name="washing_caption">Если на бирке под тазом с информацией о стирке проведена дополнительная линия, стирка должна производиться в умеренном режиме, две - в особо деликатном</string>
    <string name="temperature_caption">Температура также иногда может обозначаться количеством точек (1 – 30℃, 2 – 40℃ и т.д.)</string>
    <string name="attached_image_description">Прикрепленная картинка</string>
    <string name="twist_caption">Отметьте, если на бирке изображено «Выкручивать нельзя»</string>
    <string name="remove">Удалить</string>
    <string name="edit">Редактировать</string>
    <string name="show_details">Показать детали</string>
    <string name="image_was_not_selected">Изображение не выбрано</string>
    <string name="image_loading_error">Ошибка при загрузке изображения</string>
    <string name="image_was_selected">Изображение успешно выбрано</string>
    <string name="image_was_deleted">Прикрепленное изображение удалено</string>
    <string name="title_is_empty">Название обязательно должно быть заполнено</string>
    <string name="default_negative_button">Отменить</string>
    <string name="removing_tag">Удаление данных</string>
    <string name="removing_tag_confirmation">Вы действительно хотите удалить данные о стирке?</string>
    <string name="invalid_num_of_not_empty_fields">По крайней мере 1 пункт должен быть заполнен</string>
    <string name="error_save_image">Не удалось сохранить прикрепленное изображение</string>
    <string name="no_one_clothing_tag_added">Ни одна бирка еще не была добавлена</string>
</resources>